--- a/src/Acme/BonitaBundle/Resources/views/layout.html.twig
+++ b/src/Acme/BonitaBundle/Resources/views/layout.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block titulo%}Bonita{%endblock%}
 {% block stylesheets %}
-  <link href="{{ asset ('css/myCSS.css') }}" type="text/css" rel="stylesheet" />
+  <link href="{{ asset ('css/dssdCSS.css') }}" type="text/css" rel="stylesheet" />
 {% endblock %}
 
 {% block contenido %}
 	{{ block('fos_user_content') }}
-{%endblock%} 
+{%endblock%}
