--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
         <title>BonitaAAAA{% block titulo %}{% endblock %}</title>
         {% block stylesheets %}
         {% endblock %}
-        <link href="{{ asset ('css/dssdCSS.css') }}" type="text/css" rel="stylesheet" />
+        <link href="{{ asset ('css/dssdCss.css') }}" type="text/css" rel="stylesheet" />
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="/resources/demos/style.css">
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
