--- a/src/Acme/BonitaBundle/Resources/views/Main/index.html.twig
+++ b/src/Acme/BonitaBundle/Resources/views/Main/index.html.twig
@@ -6,7 +6,7 @@
 {% block contenido %}
     <div style="width: 600px;margin: auto">
 	    <h2> Bienvenido a nuestra compañía de seguros! </h2>
-	    <p> En este sitio podrás todos tus siniestros en nuestro sistema y realizar un seguimiento de los mismos en esta misma página, sabiendo momento a momento en qué estado se encuentra tu siniestro.</p>   
-	    <p>Agradecemos mucho tu visita, eres una parte muy importante de nuestra compañía.</p>   
+	    <p> En este sitio podrás cargar todos tus siniestros en nuestro sistema y realizar un seguimiento de los mismos, sabiendo momento a momento en qué estado se encuentra tu siniestro.</p>
+	    <p>Agradecemos mucho tu visita, eres una parte muy importante de nuestra compañía.</p>
 	</div>
-{%endblock%} 
+{%endblock%}
