--- a/src/Acme/BonitaBundle/Resources/views/ObjetoIndemnizacion/nuevoObjetoIndemnizacion.html.twig
+++ b/src/Acme/BonitaBundle/Resources/views/ObjetoIndemnizacion/nuevoObjetoIndemnizacion.html.twig
@@ -6,18 +6,18 @@
 
 {% block contenido %}
     <h2 class="titulo"> Agregar Objeto a indemnizar </h2>
-    <div class="form">
+    <div class="form" style="display: flex;
+    justify-content: center;">
         {{ form_start(form) }}
         <div class="campos-form">
             <div class="columna-form">
                 {{ form_row(form.nombre) }}
                 {{ form_row(form.cantidad) }}
                 {{ form_row(form.descripcion) }}
-            </div>
-
-            <div class="boton-form">
-                {{ form_widget(form.submit) }}
-                {{ form_widget(form.submit) }}
+                <div class="boton-form">
+                    {{ form_widget(form.submit) }}
+                    {{ form_widget(form.submit) }}
+                </div>
             </div>
         </div>
 
