--- a/src/Acme/BonitaBundle/Resources/views/Siniestro/indexSiniestros.html.twig
+++ b/src/Acme/BonitaBundle/Resources/views/Siniestro/indexSiniestros.html.twig
@@ -9,7 +9,7 @@
     {% else %}
         <h2> Mis siniestros</h2>
         <div>
-            <table class="tabla">
+            <table class="tabla tabla-siniestros" >
                 <tr class="encabezado-tabla">
                     <th>Cliente</th>
                     <th>Tipo de siniestro</th>
