--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,10 +8,12 @@
         <link href="{{ asset ('css/dssdCss.css') }}" type="text/css" rel="stylesheet" />
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="/resources/demos/style.css">
+        <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
+
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ asset ('css/jquery.datetimepicker.css') }}"/>
-        <script src="{{ asset ('js/jquery.datetimepicker.full.min.js') }}"></script> 
+        <script src="{{ asset ('js/jquery.datetimepicker.full.min.js') }}"></script>
         <!-- <script src="jquery-3.1.1.js"></script>
         <script type="text/javascript" src="canvasjs.min.js"></script>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
