--- a/src/Acme/BonitaBundle/Resources/views/Mensaje/mensaje.html.twig
+++ b/src/Acme/BonitaBundle/Resources/views/Mensaje/mensaje.html.twig
@@ -6,5 +6,5 @@
 
 {% block contenido %}
     <h2> {{ mensaje }} </h2>
-    <a class="button sombra" href="{{ path(volver) }}">Volver</a>
+    <a class="button" style="width:200px" href="{{ path(volver) }}">Volver</a>
 {%endblock%}
