--- a/src/Acme/BonitaBundle/Resources/views/Siniestro/nuevoSiniestro.html.twig
+++ b/src/Acme/BonitaBundle/Resources/views/Siniestro/nuevoSiniestro.html.twig
@@ -6,18 +6,19 @@
 
 {% block contenido %}
     <h2 class="titulo"> Nuevo Siniestro </h2>
-    <div class="form">
+    <div style="display: flex;    justify-content: center;">
         {{ form_start(form) }}
-        <div class="campos-form">
-            <div class="columna-form">
+        <div style="display: flex;    justify-content:  space-evenly;">
+            <div class="columna-form-porcentaje">
                 {{ form_row(form.nroCliente) }}
                 {{ form_row(form.tipoIncidenteId) }}
+            </div>
+            <div class="columna-form-porcentaje">
                 {{ form_row(form.fechaIncidente) }}
                 {{ form_row(form.descripcionSiniestro) }}
-            </div>
-
-            <div class="boton-form">
-                {{ form_widget(form.submit) }}
+                <div class="button-add-form" style="margin-top: 15px;">
+                    {{ form_widget(form.submit) }}
+                </div>
             </div>
         </div>
 
